# hal-sharp

./: ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  hal-sharp.mdp  hal-sharp.mds  hal-sharp.pc.in
doc/: Makefile.am  hal-sharp-docs.source
doc/en/: index.xml
doc/en/Hal/: Context.xml  DBusError.xml  DbusBusType.xml  Device+FindBy.xml  Device.xml  DeviceAddedArgs.xml  DeviceAddedHandler.xml  DeviceConditionArgs.xml  DeviceConditionHandler.xml  DeviceLostCapabilityArgs.xml  DeviceLostCapabilityHandler.xml  DeviceNewCapabilityArgs.xml  DeviceNewCapabilityHandler.xml  DevicePropertyModifiedArgs.xml  DevicePropertyModifiedHandler.xml  DeviceRemovedArgs.xml  DeviceRemovedHandler.xml  HalException.xml  PropertyType.xml
src/: AssemblyInfo.cs.in  HalContext.cs  HalDevice.cs  HalTest.cs  HalUnmanaged.cs  Makefile.am  hal-sharp.dll.config.in
